<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sliding_panel_left"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|start"
    android:orientation="vertical"
    android:background="#80000000"
    android:padding="8dp"
    android:translationX="0dp"> <!-- Start visible -->

    <Button
        android:id="@+id/button_load_mission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_mission_button"
        android:layout_gravity="center_vertical|start" />

    <Button
        android:id="@+id/button_start_stop_mission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_mission_button"
        android:enabled="false"
        android:layout_gravity="center_vertical|start" />

    <Button
        android:id="@+id/button_pause_resume_mission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_mission_button"
        android:enabled="false"
        android:layout_gravity="center_vertical|start" />
</LinearLayout>
